search page done

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="slider-active">
 
                 <div class="single-slider slider-bg1 slider-height d-flex align-items-center">
-                    <div class="container">
+                    <div class="container scrollAnimation ">
                         <div class="row">
                             <div class="col-xxl-5 col-xl-6 col-lg-7 col-md-8  col-sm-10">
                                 <div class="hero-caption text-center">
@@ -229,7 +229,7 @@
                     </div>
                 </div>
                 <div class="single-slider slider-bg1 slider-height d-flex align-items-center">
-                    <div class="container">
+                    <div class="container scrollAnimation ">
                         <div class="row">
                             <div class="col-xxl-5 col-xl-6 col-lg-7 col-md-8  col-sm-10">
                                 <div class="hero-caption text-center">
@@ -245,7 +245,7 @@
                 </div>
 
                 <div class="single-slider slider-bg2 slider-height d-flex align-items-center">
-                    <div class="container">
+                    <div class="container scrollAnimation ">
                         <div class="row justify-content-end">
                             <div class="col-xxl-5 col-xl-6 col-lg-7 col-md-8 col-sm-10">
                                 <div class="hero-caption text-center">
@@ -264,7 +264,7 @@
 
         <!--
 <section class="items-product1 pt-30">
-<div class="container">
+<div class="container scrollAnimation ">
 <div class="row">
 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
 <div class="single-items mb-20">
@@ -305,7 +305,7 @@
 -->
 
         <div class="latest-items section-padding fix">
-            <div class="container">
+            <div class="container scrollAnimation ">
                 <div class="row justify-content-between">
                     <div class="col-xl-12">
                         <div class="nav-button">
@@ -328,7 +328,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="container scrollAnimation ">
 
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-one" role="tabpanel" aria-labelledby="nav-one-tab">
@@ -512,7 +512,7 @@
             </div>
         </div>
         <section>
-            <div class="container">
+            <div class="container scrollAnimation ">
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                         <div class="single-items mb-20">
@@ -560,13 +560,13 @@
 
 
         <div class="latest-items section-padding fix">
-            <div class="container">
+            <div class="container scrollAnimation ">
                 <div class="row justify-content-between">
                     <div class="col-xl-12">
                         <div class="nav-button">
 
                             <nav>
-                                <div class="nav-tittle">
+                                <div class="nav-tittle scrollAnimation">
                                     <h3>Top Rated Lawyer's</h3>
                                 </div>
                                 <!--
@@ -583,7 +583,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="container scrollAnimation ">
 
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-one" role="tabpanel" aria-labelledby="nav-one-tab">
@@ -768,12 +768,12 @@
         </div>
 
         <div class="testimonial-area testimonial-padding">
-            <div class="container">
+            <div class="container scrollAnimation ">
                 <div class="row justify-content-center">
                     <div class="col-xl-10 col-lg-10 col-md-11">
                         <div class="h1-testimonial-active">
 
-                            <div class="single-testimonial text-center">
+                            <div class="single-testimonial scrollAnimation text-center">
                                 <div class="testimonial-caption">
                                     <div class="testimonial-top-cap">
                                         <h2>Happy Clients</h2>
@@ -794,7 +794,7 @@
                                 </div>
                             </div>
 
-                            <div class="single-testimonial text-center">
+                            <div class="single-testimonial scrollAnimation text-center">
                                 <div class="testimonial-caption ">
                                     <div class="testimonial-top-cap">
                                         <h2>Happy Clients</h2>
@@ -829,7 +829,7 @@
 
 
         <section class="home-blog">
-            <div class="container">
+            <div class="container scrollAnimation ">
                 <div class="section-tittle mb-40">
                     <h3>Trending Videos</h3>
                     <hr>
@@ -887,7 +887,7 @@
 </div>
 </div>
 </div>
-<div class="container">
+<div class="container ">
 <div class="latest-items-active">
 
 <div class="properties pb-30">
@@ -1072,7 +1072,7 @@
 
 
 <div class="categories-area">
-<div class="container">
+<div class="container scrollAnimation ">
 <div class="row">
 <div class="col-lg-3 col-md-6 col-sm-6">
 <div class="single-cat mb-50 wow fadeInUp text-center" data-wow-duration="1s" data-wow-delay=".2s">
@@ -1127,7 +1127,7 @@
         <div class="footer-wrapper gray-bg">
             <div class="footer-area footer-padding">
 
-                <div class="container">
+                <div class="container scrollAnimation ">
                     <div class="row justify-content-between">
                         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
                             <div class="single-footer-caption mb-50">
@@ -1287,6 +1287,8 @@
     <script src="assets/js/main.js"></script>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+
+    <script src="assets/js/scrolljs.js"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
@@ -1299,6 +1301,10 @@
         integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ=="
         data-cf-beacon='{"rayId":"8bdce1adfe35599f","version":"2024.8.0","serverTiming":{"name":{"cfL4":true}},"token":"cd0b4b3a733644fc843ef0b185f98241","b":1}'
         crossorigin="anonymous"></script>
+
+        <script>
+            ScrollReveal({reset: true}).reveal('.scrollAnimation', {delay : 500, distance: '50px',  duration: 1000, easing: 'ease-in'});
+        </script>
 </body>
 
 <!-- Mirrored from preview.colorlib.com/theme/capitalshop/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Sep 2024 09:17:20 GMT -->
