--- a/pro-details.html
+++ b/pro-details.html
@@ -681,7 +681,7 @@ padding-top: 50px;
       </div>
     </div>
 
-    <section class="our-client section-padding best-selling pl-50">
+    <section class="our-client section-padding best-selling ">
       <div class="container">
         <div class="row">
           <div class="offset-xl-1 col-xl-10">
