--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                         </a>
                                     </div>
                                 </li>
-                                <li> <a href="/login.html"><span class="flaticon-user" style="font-size: 20px;"></span></a></li>
+                                <li> <a href="login.html"><span class="flaticon-user" style="font-size: 20px;"></span></a></li>
 
                             </ul>
                         </div>
