add view more and fix some issue in pro-details

--- a/pro-details.html
+++ b/pro-details.html
@@ -867,7 +867,7 @@ v146.739c0.371,0.434,0.574,0.669,0.574,0.669S354.263,295.453,354.263,206.869z" /
               ipsam dicta? Dolore nam, dolores aliquid aut impedit recusandae sit, nostrum esse architecto excepturi
               nesciunt eaque mollitia quaerat doloribus obcaecati.
             </small><br><br>
-            <a class="border-bottom-gray text-dark">Watch More &rarr;</a>
+            <a href="/viewMore.html?type=video" class="border-bottom-gray text-dark">Watch More &rarr;</a>
           </div>
         </div>
         <div class="col-sm-4 mt-4">
@@ -884,7 +884,7 @@ v146.739c0.371,0.434,0.574,0.669,0.574,0.669S354.263,295.453,354.263,206.869z" /
               ipsam dicta? Dolore nam, dolores aliquid aut impedit recusandae sit, nostrum esse architecto excepturi
               nesciunt eaque mollitia quaerat doloribus obcaecati.
             </small><br><br>
-            <a class="border-bottom-gray text-dark">Watch More &rarr;</a>
+            <a href="/viewMore.html?type=video" class="border-bottom-gray text-dark">Watch More &rarr;</a>
           </div>
         </div>
         <div class="col-sm-4 mt-4">
@@ -901,7 +901,7 @@ v146.739c0.371,0.434,0.574,0.669,0.574,0.669S354.263,295.453,354.263,206.869z" /
               ipsam dicta? Dolore nam, dolores aliquid aut impedit recusandae sit, nostrum esse architecto excepturi
               nesciunt eaque mollitia quaerat doloribus obcaecati.
             </small><br><br>
-            <a class="border-bottom-gray text-dark">Watch More &rarr;</a>
+            <a href="/viewMore.html?type=video" class="border-bottom-gray text-dark">Watch More &rarr;</a>
           </div>
         </div>
 
